--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "@use-it/interval": "^0.1.3",
+    "get-age": "^1.0.1",
     "next": "^9.3.4",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
