--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ yarn-error.log*
 .AppleDouble
 .LSOverride
 
+styles/**/*.scss.d.ts
+
 # Icon must end with two \r
 Icon
 
@@ -38,3 +40,5 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+.now
