--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "concurrently \"tsm -w ./ > /dev/null\" \"next\"",
+    "prebuild": "tsm ./",
     "build": "next build",
     "start": "next start",
     "deploy": "sh deploy.sh"
@@ -20,9 +21,10 @@
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
-    "@zeit/next-sass": "^1.0.1",
-    "node-sass": "^4.13.1",
+    "concurrently": "^5.1.0",
+    "sass": "^1.26.3",
     "tslint": "^6.1.1",
+    "typed-scss-modules": "^1.3.0",
     "typescript": "^3.8.3"
   }
 }
