--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "concurrently \"tsm -w ./ > /dev/null\" \"next\"",
-    "prebuild": "tsm ./",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
     "deploy": "sh deploy.sh"
@@ -19,12 +18,14 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@types/node": "^13.11.1",
-    "@types/react": "^16.9.34",
     "concurrently": "^5.1.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^7.1.0",
+    "imagemin-svgo": "^7.1.0",
+    "next-optimized-images": "^2.5.7",
     "sass": "^1.26.3",
-    "tslint": "^6.1.1",
-    "typed-scss-modules": "^1.3.0",
-    "typescript": "^3.8.3"
+    "webp-loader": "^0.6.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
