--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.3",
   "main": "index.js",
   "license": "MIT",
+  "homepage": ".",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -10,22 +11,15 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
-    "@use-it/interval": "^0.1.3",
+    "cloudinary-core": "^2.8.2",
     "get-age": "^1.0.1",
-    "next": "^9.3.4",
+    "qs": "^6.9.3",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-optipng": "^7.1.0",
-    "imagemin-svgo": "^7.1.0",
-    "next-optimized-images": "^2.5.7",
-    "sass": "^1.26.3",
-    "webp-loader": "^0.6.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "next": "^9.3.4",
+    "sass": "^1.26.3"
   }
 }
