--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "firebase": "^7.14.0",
     "get-age": "^1.0.1",
     "qs": "^6.9.3",
     "ramda": "^0.27.0",
